change templates to call modal_handler_add() is called last since any errors between calling this function and returning will crash blender. see [#30687]